--- a/style.css
+++ b/style.css
@@ -72,4 +72,6 @@ div.questions a.btn{
   background-color: #007bff;
   border-color: #007bff;
   text-decoration: none;
+  padding:18px;
+  font-size:20px
 }
